Embed version number as module attribute

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
 name = "pdfnumbering"
-version = "0.1.0"
 dependencies = [
     "fpdf2",
     "pypdf",
 ]
+dynamic = ["version"]
 
 [project.scripts]
 pdfnumbering = "pdfnumbering.cli:main"
+
+[tool.setuptools.dynamic]
+version = { attr = "pdfnumbering.__version__" }
